fix(artigoindividual): image and body have z-index to allow body to be on top
previously image was overlaying and blocking user interaction with article body

Fix #123

--- a/src/Paginas/Blog/ArtigoIndividual.css
+++ b/src/Paginas/Blog/ArtigoIndividual.css
@@ -32,7 +32,7 @@
 /**************************************************************/
 /* FIRST-LEVEL DESCENDANT */
 .ArtigoIndividual > img {
-  /*display: none;*/
+  z-index: 1;
   width: 100%;
   position: absolute;
   right: 0;
@@ -52,6 +52,7 @@
 /**************************************************************/
 /* FIRST-LEVEL DESCENDANT */
 .corpo-do-artigo {
+  z-index: 2;
   width: 100%;
   min-width: 0;
   display: flex;
